<resources>
    <string name="app_name">Guess Number</string>
    <string name="range">Range is 1..5</string>
    <string name="one_to_five">1..5</string>
    <string name="one_to_ten">1..10</string>
    <string name="one_to_twenty">1..20</string>
    <string name="guess_1">guess 1</string>
    <string name="guess2">guess2</string>
    <string name="guess3">guess3</string>
    <string name="check_guess">check Guess</string>
    <string name="same_guess">same guess!</string>
    <string name="sheet_title">Oh! you didn\'t make it :(</string>
    <string name="broken_light">broken_light</string>
    <string name="sheet_title2">WOW, You made it</string>
</resources>